--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12",
+    "vue-select": "^3.16.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
